# EnvBench-harbor

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: harbor-adapter.yaml
harbor_adapter/: adapter.py  pyproject.toml  run_adapter.py
harbor_adapter/templates/: Dockerfile  instruction.md  task.toml
test/The-OpenROAD-Project-OpenLane-e0d2e618/: instruction.md  task.toml
test/amperser-proselint-94a1eea9/: instruction.md  task.toml
test/andreidrang-python-rucaptcha-dedaff14/: instruction.md  task.toml
test/artesiawater-hydropandas-2426022e/: instruction.md  task.toml
test/asdf-format-asdf-77d2bba6/: instruction.md  task.toml
test/asdf-format-asdf-standard-c367d14f/: instruction.md  task.toml
test/astropy-photutils-54574a5c/: instruction.md  task.toml
test/bdaiinstitute-spatialmath-python-43d9a95e/: instruction.md  task.toml
test/bitcart-bitcart-b41b6114/: instruction.md  task.toml
test/bmun-huxley-271aeac9/: instruction.md  task.toml
test/catalystneuro-roiextractors-4d98f317/: instruction.md  task.toml
test/centre-for-humanities-computing-dacy-d990deb5/: instruction.md  task.toml
test/ciscotestautomation-genieparser-529dba98/: instruction.md  task.toml
test/cltk-cltk-7014616e/: instruction.md  task.toml
test/compserv-hknweb-422acacc/: instruction.md  task.toml
test/conda-forge-staged-recipes-1f39220f/: instruction.md  task.toml
test/cookiecutter-cookiecutter-f49dcf97/: instruction.md  task.toml
test/cpcloud-protoletariat-5c85c8d2/: instruction.md  task.toml
test/dagshub-client-f8d89c53/: instruction.md  task.toml
(+1260 files in other folders)
