[project]
name = "envbench-harbor-adapter"
version = "0.1.0"
description = "Harbor adapter for the EnvBench benchmark"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "huggingface-hub",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
